--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JavaScript Data Structures Arrays Lab for Learn.co",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R mocha-multi --reporter-options spec=-,json=.results.json"
+    "start": "node ./bin/www",
+    "test": "mocha -R mocha-multi --reporter-options spec=-,json=.results.json --timeout 1000000000"
   },
   "repository": {
     "type": "git",
